@@ -27,50 +27,52 @@ EXTRA_DIST = \
 	cursors/mouse1_selmmsk	\
 	cursors/mouse1_selp	\
 	cursors/mouse1_selpmsk	\
-	pixmaps/anchor.xpm	 \
-	pixmaps/chain.xpm	 \
-	pixmaps/channel.xbm	 \
-	pixmaps/delete.xpm	 \
-	pixmaps/duplicate.xpm	 \
-	pixmaps/eye.xbm		 \
-	pixmaps/layer.xbm	 \
-	pixmaps/linked.xbm	 \
-	pixmaps/locked.xpm	 \
-	pixmaps/lower.xpm	 \
-	pixmaps/mask.xbm	 \
-	pixmaps/new.xpm		 \
-	pixmaps/no.xpm		 \
-	pixmaps/raise.xpm	 \
-	pixmaps/path.xbm	 \
-	pixmaps/penadd.xpm	 \
-	pixmaps/pendel.xpm	 \
-	pixmaps/penedit.xpm	 \
-	pixmaps/pennorm.xpm	 \
-	pixmaps/penstroke.xpm	 \
-	pixmaps/toselection.xpm  \
-	pixmaps/yes.xpm          \
-	pixmaps/zoom_in.xpm	 \
-	pixmaps/zoom_out.xpm	 \
-	README.i18n		 \
-	README.win32		 \
-	README.perl		 \
-	ChangeLog.pre-1-0	 \
-	MAINTAINERS		 \
-	TODO			 \
-	gtkrc			 \
-	unitrc			 \
-	gimp_logo.ppm		 \
-	gimp_splash.ppm		 \
-	gimp1_1_splash.ppm	 \
-	rmshm			 \
-	user_install		 \
-	user_install.bat	 \
-	ps-menurc		 \
-	gimp.1			 \
-	gimptool.1		 \
-	gtkrc.forest2		 \
-	gimp.m4			 \
-	gimprc.win32		 \
+	cursors/mouse1_u	\
+	cursors/mouse1_umsk	\
+	pixmaps/anchor.xpm	\
+	pixmaps/chain.xpm	\
+	pixmaps/channel.xbm	\
+	pixmaps/delete.xpm	\
+	pixmaps/duplicate.xpm	\
+	pixmaps/eye.xbm		\
+	pixmaps/layer.xbm	\
+	pixmaps/linked.xbm	\
+	pixmaps/locked.xpm	\
+	pixmaps/lower.xpm	\
+	pixmaps/mask.xbm	\
+	pixmaps/new.xpm		\
+	pixmaps/no.xpm		\
+	pixmaps/raise.xpm	\
+	pixmaps/path.xbm	\
+	pixmaps/penadd.xpm	\
+	pixmaps/pendel.xpm	\
+	pixmaps/penedit.xpm	\
+	pixmaps/pennorm.xpm	\
+	pixmaps/penstroke.xpm	\
+	pixmaps/toselection.xpm	\
+	pixmaps/yes.xpm         \
+	pixmaps/zoom_in.xpm	\
+	pixmaps/zoom_out.xpm	\
+	README.i18n		\
+	README.win32		\
+	README.perl		\
+	ChangeLog.pre-1-0	\
+	MAINTAINERS		\
+	TODO			\
+	gtkrc			\
+	unitrc			\
+	gimp_logo.ppm		\
+	gimp_splash.ppm		\
+	gimp1_1_splash.ppm	\
+	rmshm			\
+	user_install		\
+	user_install.bat	\
+	ps-menurc		\
+	gimp.1			\
+	gimptool.1		\
+	gtkrc.forest2		\
+	gimp.m4			\
+	gimprc.win32		\
 	config.h.win32
 
 gimpdata_DATA = \
