@@ -1,3 +1,10 @@
+Sun Jun  6 11:16:12 PDT 1999 Manish Singh <yosh@gimp.org>
+
+	* Makefile.am
+	* app/Makefile.am
+	* libgimp/Makefile.am
+	* plug-ins/rcm/Makefile.am: various dist fixes
+
 1999-06-06  Michael Natterer  <mitschel@cs.tu-berlin.de>
 
 	* app/Makefile.am
